syntax ="proto3";

package common;

option go_package = "github.com/yb2020/odoc-proto/gen/go/common";

message ResponseInfo {
  int32   errCode = 1; // 参考common及各领域下 ErrorCode
  string  msg = 2;
}

// 分页相关
message PageRequest {
  int32 pageNum = 1;
  int32 pageSize = 2;
}

// 分页相关 对应cn.edu.idea.cloud.common.page.PageQuery
message PageQuery {
  int32 currentPage = 1;
  int32 pageSize = 2;
}

message PageResponse {
  int32 pageNum = 1;
  bool isFirstPage = 2;
  bool isLastPage = 3;
  int32 total = 4;
}

/*
通用错误码，非单一领域专用，范围：1-9999
*/
enum ErrorCode {
  SUCCESS = 0;
  /* ErrorCode begin, append your error code below */
  
  ERR_UNLOGIN            = 1; // 无法获取登录太
  ERR_ACCESS_CONTROL     = 2; // 无法获取访问权限信息
  ERR_SITE_INFO          = 3; // 无法获取站点信息
  
  /* ErrorCode end, do not edit below area */
  ERR_UNKNOW = 10000;
  reserved 10001 to max;
}